--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
     </main>
     <script>
       document.getElementsByClassName('project-name')[0].innerText = document.domain;
+      document.title = document.domain + ' - Guta.com  - Domain Sales, Domain Acquisitions, Domain Brokerage, Domain Consulting, Domain Investment'
     </script>
   </body>
 </html>
